# agentic-offensive-testing-platform

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
artifacts/: sbom.placeholder.json
campaigns/: authorized-webapp-campaign.example.yaml  bounded-fuzzing-campaign.example.yaml  bug-bounty-efficiency-campaign.example.yaml  sbom-config-crypto-campaign.example.yaml  service-control-panel-campaign.example.yaml
cases/: bounded-fuzzing.example.yaml  control-panel-evidence-records.example.yaml  control-panel-safe-observations.example.yaml  control-panel-target-model.example.yaml  cryptographic-controls-review.example.yaml  sbom-dependency-review.example.yaml  service-control-panel-misconfiguration.example.yaml  wstg-authn-session.example.yaml  wstg-authz-cross-account.example.yaml  wstg-browser-agent-context.example.yaml  wstg-client-side-content-confusion.example.yaml  wstg-security-headers.example.yaml
config/: forbidden-actions.example.yaml  models.example.yaml  operator-approval.example.yaml  program-profile.example.yaml  rate-limits.example.yaml  review-decision.example.yaml  scope.example.yaml  scope.fuzzing-dry-run.example.yaml  scope.panel-dry-run.example.yaml  template-sources.example.yaml  tools.example.yaml
docs/: adapter-capability-registry.md  agentic-architecture.md  agentic-mvp-acceptance.md  architecture-authority-review.md  architecture.md  authorized-use-policy.md  bug-bounty-mode.md  bug-bounty-program-profile.md  bug-bounty-style-authorization.md  campaign-governed-tools.md  campaign-loop.md  campaign-state-model.md  candidate-evaluation-workflow.md  commercialization-plan.md  commercialization-readiness.yaml  cryptographic-controls-review.md  demo-script.md  dependency-license-inventory.json  dependency-license-inventory.md  development-plan-public-posture-addendum.md  development-plan.md  dry-run-demonstration-output.md  duplicate-avoidance.md  engineering-agent-sop.md  evaluator-license-model.md  evidence-model.md  finding-lifecycle.md  fuzzing-policy.md  human-approval-gates.md  internal-sow-mode.md  langgraph-orchestration.md  licensing-readiness.md  live-adapter-readiness.md  live-assessment-scope-model.md  live-campaign-authorization-checklist.md  no-mcp-core-decision.md  ollama-local-models.md  operator-code-of-conduct.md  operator-metrics.md  parrot-foss-tooling.md  (+28 more)
scripts/: audit-commercial-release-readiness.py  audit-proprietary-license.py  bootstrap.sh  (+20 more)
(+440 files in other folders)
