[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-offensive-testing-platform"
version = "0.1.0"
description = "Policy-constrained campaign harness for authorized offensive security testing."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Duncan Stirling" }]
dependencies = [
  "PyYAML>=6.0,<7",
  "langgraph>=1.2.7,<1.3",
  "langgraph-checkpoint-sqlite>=3.1,<3.2",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3,<10"]

[project.scripts]
aotp = "aotp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
