[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-offensive-testing-platform"
version = "0.1.0"
description = "Policy-constrained campaign harness for authorized offensive security testing."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Duncan Stirling" }]
license = "LicenseRef-Proprietary"
license-files = ["LICENSE.md"]
dependencies = [
  "deepagents>=0.6.12,<0.7",
  "langchain-ollama>=1.1,<1.2",
  "PyYAML>=6.0,<7",
  "langgraph>=1.2.7,<1.3",
  "langgraph-checkpoint-sqlite>=3.1,<3.2",
]

[project.optional-dependencies]
dev = [
  "build>=1.5,<2",
  "pytest>=9.0.3,<10",
]
audit = [
  "pip-audit>=2.10,<3",
  "pip-licenses>=5.5,<6",
]

[project.scripts]
aotp = "aotp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
